Change Log
----------

  V0.42
  
  - Fixes:
    - ListData::swapItems() no longer raises a data changed event.
    - ListData::sort() raises a data changed event.
  
  
  - New Features:
    - Split ListData class into ListData, ListDataItem, ListBoxData and
      ListBoxDataItem classes for greater flexibility.
    - Minor improvements to the ListBox's use of the ListBoxData class.
    - Altered ListData::quickSort() and added compareTo() method to ListDataItem
      to allow custom ordering of ListDataItem subclasses.

  V0.41 (20091124)
  
  - Fixes:
    - Removed Gadget::unregisterChildrenFromVBL() declaration from gadget.h as
      the function does not exist.
    - Graphics::dim() draws to correct dimensions.
    - GraphicsPort::dim() clips properly.
    - BitmapButton::getPreferredDimensions() returns the correct size.
    - AnimButton::getPreferredDimensions() returns the correct size.
    - Anim button animation continues playing correctly when clicked if
      disabled.
    - ListBox::getPreferredDimensions() returns the correct size.
    - ListBox::draw() clips more effectively.
    - Removed getEditableData() bodge from bitmap classes; all interaction with
      bitmap data happens through bitmap methods.
    - Moved IK bitmaps out of demo folder/NDS into animbutton test.
    - ScrollingListBox::getPreferredDimensions() returns the correct size.
    - SliderHorizontal and SliderVertical produce correct values when they are
      showing a range of values large enough for the grip to be artificially
      enlarged.
    - Scrollbar buttons scroll by amount based on max/min values and height of
      slider rather than arbitrary value.
    - Removed ScrollbarVertical and ScrollbarHorizontal setButtonScrollAmount().
    - AnimButton animations pause when the button is disabled.
    - DMA copying function uses DMA for RAM->VRAM copies.
  
  - New Features:
    - SDL framebuffer code merged into FrameBuffer class.
    - Added label test.